--- a/NotengoParty.vcxproj.filters
+++ b/NotengoParty.vcxproj.filters
@@ -7,6 +7,9 @@
     <Filter Include="Game">
       <UniqueIdentifier>{62327cbd-b8a0-498f-8623-5ca558fa0184}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Core\imgui">
+      <UniqueIdentifier>{bed45f96-fb23-413b-9f38-63a19bd47697}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Core\SDL_InputImpl.cpp">
@@ -26,6 +29,18 @@
     </ClCompile>
     <ClCompile Include="Source\Core\Engine.cpp">
       <Filter>Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Core\imgui\imgui.cpp">
+      <Filter>Core\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Core\imgui\imgui_draw.cpp">
+      <Filter>Core\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Core\imgui\imgui_impl_sdl.cpp">
+      <Filter>Core\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game.cpp">
+      <Filter>Game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +67,30 @@
     </ClInclude>
     <ClInclude Include="Source\Core\LightVector.h">
       <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\imgui\imconfig.h">
+      <Filter>Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\imgui\imgui.h">
+      <Filter>Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\imgui\imgui_impl_sdl.h">
+      <Filter>Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\imgui\imgui_internal.h">
+      <Filter>Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\imgui\stb_rect_pack.h">
+      <Filter>Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\imgui\stb_textedit.h">
+      <Filter>Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\imgui\stb_truetype.h">
+      <Filter>Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game.h">
+      <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
