--- a/NotengoParty.vcxproj.filters
+++ b/NotengoParty.vcxproj.filters
@@ -10,6 +10,12 @@
     <Filter Include="Core\imgui">
       <UniqueIdentifier>{bed45f96-fb23-413b-9f38-63a19bd47697}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Data">
+      <UniqueIdentifier>{d6c0b943-a061-4d23-991a-a7490b07ea0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Data\Fonts">
+      <UniqueIdentifier>{468b247f-ef1c-4aa8-bad4-735535caaf8c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Core\SDL_InputImpl.cpp">
@@ -92,5 +98,10 @@
     <ClInclude Include="Source\Game.h">
       <Filter>Game</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="Data\Fonts\ArvinLight.ttf">
+      <Filter>Data\Fonts</Filter>
+    </Font>
   </ItemGroup>
 </Project>
