--- a/NotengoParty.vcxproj.filters
+++ b/NotengoParty.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Source\Game.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Core\SDL_TextureImpl.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\System.h">
@@ -97,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="Source\Game.h">
       <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\Texture.h">
+      <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
