--- a/NotengoParty.vcxproj
+++ b/NotengoParty.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Source\Core\imgui\imgui.cpp" />
     <ClCompile Include="Source\Core\imgui\imgui_draw.cpp" />
     <ClCompile Include="Source\Core\imgui\imgui_impl_sdl.cpp" />
+    <ClCompile Include="Source\Core\imgui_impl_core.cpp" />
     <ClCompile Include="Source\Core\SDL_InputImpl.cpp" />
     <ClCompile Include="Source\Core\SDL_RendererImpl.cpp" />
     <ClCompile Include="Source\Core\SDL_SystemImpl.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Source\Core\imgui\stb_rect_pack.h" />
     <ClInclude Include="Source\Core\imgui\stb_textedit.h" />
     <ClInclude Include="Source\Core\imgui\stb_truetype.h" />
+    <ClInclude Include="Source\Core\imgui_impl_core.h" />
     <ClInclude Include="Source\Core\Input.h" />
     <ClInclude Include="Source\Core\LightVector.h" />
     <ClInclude Include="Source\Core\Math.h" />
