--- a/NotengoParty.vcxproj.filters
+++ b/NotengoParty.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="Source\Core\imgui_impl_core.cpp">
       <Filter>Core</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Core\SDL_FileImpl.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\System.h">
@@ -111,6 +114,9 @@
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="Source\Core\imgui_impl_core.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\File.h">
       <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
