--- a/NotengoParty.vcxproj
+++ b/NotengoParty.vcxproj
@@ -153,7 +153,9 @@
     <ClCompile Include="Source\Core\SDL_TextureImpl.cpp" />
     <ClCompile Include="Source\Core\SDL_WindowImpl.cpp" />
     <ClCompile Include="Source\Game.cpp" />
+    <ClCompile Include="Source\InputAux.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Engine.h" />
@@ -176,6 +178,8 @@
     <ClInclude Include="Source\Core\Texture.h" />
     <ClInclude Include="Source\Core\Window.h" />
     <ClInclude Include="Source\Game.h" />
+    <ClInclude Include="Source\InputAux.h" />
+    <ClInclude Include="Source\UI.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Data\Fonts\ArvinLight.ttf">
