--- a/NotengoParty.vcxproj
+++ b/NotengoParty.vcxproj
@@ -153,8 +153,8 @@
     <ClCompile Include="Source\Core\SDL_TextureImpl.cpp" />
     <ClCompile Include="Source\Core\SDL_WindowImpl.cpp" />
     <ClCompile Include="Source\Game.cpp" />
+    <ClCompile Include="Source\Image.cpp" />
     <ClCompile Include="Source\InputAux.cpp" />
-    <ClCompile Include="Source\Jobs.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\UI.cpp" />
   </ItemGroup>
@@ -179,6 +179,7 @@
     <ClInclude Include="Source\Core\Texture.h" />
     <ClInclude Include="Source\Core\Window.h" />
     <ClInclude Include="Source\Game.h" />
+    <ClInclude Include="Source\Image.h" />
     <ClInclude Include="Source\InputAux.h" />
     <ClInclude Include="Source\stb_image.h" />
     <ClInclude Include="Source\UI.h" />
