--- a/NotengoParty.vcxproj
+++ b/NotengoParty.vcxproj
@@ -152,11 +152,12 @@
     <ClCompile Include="Source\Core\SDL_SystemImpl.cpp" />
     <ClCompile Include="Source\Core\SDL_TextureImpl.cpp" />
     <ClCompile Include="Source\Core\SDL_WindowImpl.cpp" />
-    <ClCompile Include="Source\DebugController.cpp" />
+    <ClCompile Include="Source\System_DebugController.cpp" />
     <ClCompile Include="Source\Game.cpp" />
     <ClCompile Include="Source\Image.cpp" />
     <ClCompile Include="Source\InputAux.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\System_Manager.cpp" />
     <ClCompile Include="Source\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -179,11 +180,13 @@
     <ClInclude Include="Source\Core\System.h" />
     <ClInclude Include="Source\Core\Texture.h" />
     <ClInclude Include="Source\Core\Window.h" />
-    <ClInclude Include="Source\DebugController.h" />
+    <ClInclude Include="Source\System_DebugController.h" />
     <ClInclude Include="Source\Game.h" />
     <ClInclude Include="Source\Image.h" />
     <ClInclude Include="Source\InputAux.h" />
     <ClInclude Include="Source\stb_image.h" />
+    <ClInclude Include="Source\System.h" />
+    <ClInclude Include="Source\System_Manager.h" />
     <ClInclude Include="Source\UI.h" />
   </ItemGroup>
   <ItemGroup>
